--- a/my_first_rag.ipynb
+++ b/my_first_rag.ipynb
@@ -69,20 +69,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qIDHMrPqHbBQ",
-        "outputId": "1662988d-8f20-4aa6-8b82-57b031de8605"
+        "outputId": "0c0962ff-27aa-4e36-84f7-8aa2a4c71671"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📖 Attempting to load: An Introduction to Machine Learning -- Miroslav Kubát -- ( WeLib.org ).pdf...\n",
+            "📖 Attempting to load: /content/An Introduction to Machine Learning -- Miroslav Kubát -- ( WeLib.org ).pdf...\n",
             "✅ SUCCESS! I read 348 pages.\n",
             "\n",
             "--- Here is what the first 500 characters look like: ---\n",
@@ -97,8 +97,8 @@
       "source": [
         "from langchain_community.document_loaders import PyPDFLoader\n",
         "\n",
-        "#use the actual name of your pdf\n",
-        "pdf_filename = \"An Introduction to Machine Learning -- Miroslav Kubát -- ( WeLib.org ).pdf\"\n",
+        "# CORRECTED EXAMPLE (Verify your actual file name!)\n",
+        "pdf_filename = \"/content/An Introduction to Machine Learning -- Miroslav Kubát -- ( WeLib.org ).pdf\"\n",
         "\n",
         "try:\n",
         "    print(f\"📖 Attempting to load: {pdf_filename}...\")\n",
@@ -119,6 +119,75 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install beautifulsoup4"
+      ],
+      "metadata": {
+        "id": "d0PTPLuijP61",
+        "outputId": "07257a5c-8234-4221-bdd4-adfa9f88b578",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.12/dist-packages (4.13.5)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.12/dist-packages (from beautifulsoup4) (2.8)\n",
+            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.12/dist-packages (from beautifulsoup4) (4.15.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_community.document_loaders import WebBaseLoader\n",
+        "\n",
+        "# -------------------------------------------\n",
+        "# 👇 REPLACE THIS with the URL you want to chat with!\n",
+        "target_url = \"kyu.ac.ke\"\n",
+        "# -------------------------------------------\n",
+        "\n",
+        "try:\n",
+        "    print(f\"🌐 Attempting to load: {target_url}...\")\n",
+        "\n",
+        "    # Switch from PyPDFLoader to WebBaseLoader\n",
+        "    loader = WebBaseLoader(target_url)\n",
+        "    pages = loader.load()\n",
+        "\n",
+        "    print(f\"✅ SUCCESS! I loaded the website.\")\n",
+        "    print(f\"📄 Document count: {len(pages)}\")\n",
+        "    print(\"\\n--- Preview of the content ---\")\n",
+        "    print(pages[0].page_content[:500])\n",
+        "\n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Error: {e}\")"
+      ],
+      "metadata": {
+        "id": "j0zK-ehljWbO",
+        "outputId": "3e52febe-749a-45a3-e023-c9ab9afae851",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🌐 Attempting to load: kyu.ac.ke...\n",
+            "❌ Error: Invalid URL 'kyu.ac.ke': No scheme supplied. Perhaps you meant https://kyu.ac.ke?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -127,9 +196,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xMYS5WtGOxrT",
-        "outputId": "0caed37a-8053-48cb-8884-54f074b38b6a"
+        "outputId": "68ff9fac-3cb6-4e13-c899-1458badec964"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,30 +255,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W8EoCBKRQyMw",
-        "outputId": "bbb1f315-4b01-4f57-f914-46f1d6aca7e0"
+        "outputId": "63ff6e03-ecc1-46da-eae8-85f52aa07e75"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "✂️ Splitting the book into chunks...\n",
-            "✅ Done! We turned 348 pages into 1080 small chunks.\n",
+            "✅ Done! We turned 1 pages into 177 small chunks.\n",
             "\n",
             "--- Example of a single chunk ---\n",
-            "5.1 Multilayer Perceptrons as Classiﬁers ................................ 91\n",
-            "5.2 Neural Network’s Error .............................................. 95\n",
-            "5.3 Backpropagation of Error ............................................ 97\n",
-            "5.4 Special Aspects of Multilayer Perceptrons .......................... 100\n",
-            "5.5 Architectural Issues .................................................. 104\n",
-            "5.6 Radial-Basis Function Networks .................................... 106\n",
-            "5.7 Summary and Historical Remarks ................................... 109\n",
-            "5.8 Solidify Your Knowledge ............................................ 110\n",
-            "6 Decision Trees ............................................................... 113\n",
-            "6.1 Decision Trees as Classiﬁers ......................................... 113\n",
-            "6.2 Induction of Decision Trees ......................................... 117\n",
-            "6.3 How Much Information Does an Attribute Convey? ............... 119\n"
+            "From a theoretical viewpoint, probably approximately correct learning provides a mathematical and statistical framework for describing machine learning. Most traditional machine learning and deep learning algorithms can be described as empirical risk minimisation under this framework.\n"
           ]
         }
       ]
@@ -252,9 +310,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iQslok8vRjWp",
-        "outputId": "bedb430e-a58c-439d-ef29-989caae6fd7a"
+        "outputId": "e12ddd13-7b25-4953-9f13-64dba9bfa808"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ER3-LzD7bu2z",
-        "outputId": "1d4f7e78-72e1-4a57-a2b1-3ea0faf8c1ac"
+        "outputId": "03aaf1f2-009c-4f31-b1ee-5b0bfd1267f5"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,35 +419,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYs5aj2xffXk",
-        "outputId": "df7a725d-5e4c-452e-fb67-2579d2a272e5"
+        "outputId": "9e144dea-9d7f-4ce3-f3a2-a4271f087330"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your prompt what is machine learning\n",
-            "🕵️‍♀️ Searching for: 'what is machine learning'\n",
+            "Enter your prompt kirinyaga university\n",
+            "🕵️‍♀️ Searching for: 'kirinyaga university'\n",
             "\n",
             "--- Top Result Found ---\n",
-            "Introduction\n",
-            "Machine learning has come of age. And just in case you might think this is a mere\n",
-            "platitude, let me clarify.\n",
-            "The dream that machines would one day be able to learn is as old as computers\n",
-            "themselves, perhaps older still. For a long time, however, it remained just that: a\n",
-            "dream. True, Rosenblatt’s perceptron did trigger a wave of activity, but in retrospect,\n",
-            "the excitement has to be deemed short-lived. As for the attempts that followed, these\n",
-            "fared even worse; barely noticed, often ignored, they never made a breakthrough—\n",
-            "no software companies, no major follow-up research, and not much support from\n",
-            "funding agencies. Machine learning remained an underdog, condemned to live in\n",
-            "the shadow of more successful disciplines. The grand ambition lay dormant.\n",
-            "And then it all changed.\n",
-            "A group of visionaries pointed out a weak spot in the knowledge-based systems\n",
-            "that were all the rage in the 1970s’ artiﬁcial intelligence: where was the “know-\n",
+            "Miroslav Kubat\n",
+            "An Introduction to Machine\n",
+            "Learning\n",
+            "Second Edition\n",
+            "123\n",
             "\n",
             "--- Source Metadata ---\n",
-            "{'moddate': '2017-08-26T13:03:41+05:30', 'page': 9, 'source': 'An Introduction to Machine Learning -- Miroslav Kubát -- ( WeLib.org ).pdf', 'page_label': 'xi', 'producer': 'Adobe PDF Library 15.0', 'total_pages': 348, 'creationdate': '2017-08-26T12:39:54+05:30', 'creator': 'Adobe InDesign CC 2017 (Windows)'}\n"
+            "{'moddate': '2017-08-26T13:03:41+05:30', 'page': 2, 'source': '/content/An Introduction to Machine Learning -- Miroslav Kubát -- ( WeLib.org ).pdf', 'creator': 'Adobe InDesign CC 2017 (Windows)', 'total_pages': 348, 'creationdate': '2017-08-26T12:39:54+05:30', 'page_label': 'iii', 'producer': 'Adobe PDF Library 15.0'}\n"
           ]
         }
       ]
